--- a/src/style.css
+++ b/src/style.css
@@ -3,5 +3,14 @@
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
+  font-size: 62.5%;
 }
 
+.card {
+  width: 550px;
+  height: 868px;
+}
+
+.info img {
+  width: 317px;
+}
