--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,9 @@
   padding: 0;
   font-size: 62.5%;
 }
+body {
+  /* This is kind of unusual, but it solves the problem */
+  background-color: #161619;
+  display: flex;
+  justify-content: center;
+}
