--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,10 +1,11 @@
 footer {
-  padding: 10px 20px;
+  padding: 10px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: #161619;
   width: 100%;
+  border-radius: 0 0 10px 10px;
 }
 
 footer a {
