--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #1a1b21;
+  background-color: hsl(230, 15%, 15%);
   border-radius: 10px;
 }
 
