--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px;
 }
 
 .card-container {
@@ -19,6 +20,5 @@ body {
   justify-content: center;
   align-items: center;
   width: 550px;
-  height: 550px;
-  margin: 50px;
+  padding: 10px;
 }
